plugins {
    id 'java'
    id 'maven'
    id 'eclipse'
}

repositories {
    mavenLocal()
    mavenCentral()
    jcenter()
    google()
}

sourceCompatibility = "1.9"
targetCompatibility = "1.9"
wrapper {
    gradleVersion = '5.0'
    distributionType = Wrapper.DistributionType.BIN
}

dependencies {
    implementation 'org.apache.commons:commons-lang3:3.4'
    implementation group: 'commons-io', name: 'commons-io', version: '2.6'
    implementation group: 'commons-net', name: 'commons-net', version: '3.6'
    implementation group: 'org.slf4j', name: 'slf4j-api', version: '1.7.22'
    implementation group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.22'
    implementation group: 'javax.annotation', name: 'javax.annotation-api', version: '1.3.2'
    
    testImplementation 'junit:junit:4.12'
    testImplementation 'org.testng:testng:6.8'
    testImplementation 'org.mockito:mockito-core:2.23.0'
}

